# ALEX_MIKOV_BUILDS

./: .env.default  .env.example  .gitignore  .gitignore copy  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_houses.py  003_avatar_videos.py  004_house_specs.py  005_address_catalog.py
backend/scripts/: import_osm_addresses.py  seed_houses.py
backend/src/: main.py
backend/src/api/routers/: addresses.py  admin_houses.py  auth.py  houses.py  models.py
backend/src/api/schemas/: addresses.py  houses.py  models.py
backend/src/config/: containers.py  settings.py
backend/src/domain/: exceptions.py  video_links.py
backend/src/domain/entities/: address.py  geocoding.py  house_model.py  house_write.py
backend/src/domain/enums/: house.py
backend/src/domain/repositories/: address.py  house_model.py
backend/src/infrastructure/: auth.py  s3_storage.py
backend/src/infrastructure/db/: database.py  models.py
backend/src/infrastructure/geocoding/: nominatim.py
backend/src/infrastructure/persistence/: house_write.py  orm_mappers.py
backend/src/infrastructure/repositories/alchemy/: address.py  base.py  house_model.py
backend/src/infrastructure/uow/: alchemy.py  base.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/models/: README.txt  demo-house.glb  models.meta.json
frontend/scripts/: generate-demo-glb.mjs  sync-glb-manifest.mjs
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  houseEnums.ts  upload.ts
frontend/src/components/: About.tsx  Contact.tsx  Hero.tsx  HousePortfolio.tsx  ModelViewer.tsx
frontend/src/components/admin/: AddressAutocomplete.tsx  AdminCard.tsx  DropZone.tsx  HouseSpecsForm.tsx  MediaPreview.tsx  ToggleGroup.tsx  UploadProgress.tsx  YandexMapPicker.tsx
frontend/src/components/house/: HouseSpecsDisplay.tsx  MortgageCalculator.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Section.tsx
frontend/src/components/motion/: Reveal.tsx
frontend/src/components/video/: VideoPlayer.tsx
frontend/src/components/viewer/: CameraControls.tsx  FlyCameraControls.tsx  GlbScene.tsx  LazyModelViewer.tsx  MobileFlyPad.tsx  ModelViewer.tsx  ViewerToolbar.tsx  flyTouchKeys.ts  preload.ts  viewerState.ts
frontend/src/data/: models.ts  photos.ts  site.ts
frontend/src/lib/: glb.ts  glbLoadQueue.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  HouseDetailPage.tsx  ModelsPage.tsx
